--- a/spec/cassettes/Mule_Resources_Session/_find/with_known_session/1_1_2_1.yml
+++ b/spec/cassettes/Mule_Resources_Session/_find/with_known_session/1_1_2_1.yml
@@ -27,7 +27,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 07 Nov 2019 20:45:15 GMT
+      - Fri, 08 Nov 2019 16:15:42 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -52,7 +52,7 @@ http_interactions:
       - W/"1a9-v44TXZLw5iptjXjTcvM0j9IXvFM"
     body:
       encoding: ASCII-8BIT
-      string: '{"objectId":"1234","sessionToken":"ENV[PARSE_SESSION_TOKEN]","user":{"__type":"Pointer","className":"_User","objectId":"ENV[PARSE_USER_OBJECT_ID]"},"createdWith":{"action":"login","authProvider":"anonymous"},"restricted":false,"expiresAt":{"__type":"Date","iso":"2020-10-13T13:03:19.256Z"},"installationId":"1234","createdAt":"2019-10-14T13:03:19.256Z","updatedAt":"2019-10-14T13:03:19.256Z"}'
+      string: '{"objectId":"ENV[PARSE_SESSION_OBJECT_ID]","sessionToken":"ENV[PARSE_SESSION_TOKEN]","user":{"__type":"Pointer","className":"_User","objectId":"ENV[PARSE_USER_OBJECT_ID]"},"createdWith":{"action":"login","authProvider":"anonymous"},"restricted":false,"expiresAt":{"__type":"Date","iso":"2020-10-13T13:03:19.256Z"},"installationId":"1234","createdAt":"2019-10-14T13:03:19.256Z","updatedAt":"2019-10-14T13:03:19.256Z"}'
     http_version:
-  recorded_at: Thu, 07 Nov 2019 20:45:13 GMT
+  recorded_at: Fri, 08 Nov 2019 16:15:42 GMT
 recorded_with: VCR 5.0.0
