--- a/spec/cassettes/Mule_Session/_find_/with_known_session/1_2_2_1.yml
+++ b/spec/cassettes/Mule_Session/_find_/with_known_session/1_2_2_1.yml
@@ -14,7 +14,7 @@ http_interactions:
       X-Parse-Rest-Api-Key:
       - ENV[PARSE_REST_API_KEY]
       X-Parse-Session-Token:
-      - '123456'
+      - ENV[PARSE_SESSION_TOKEN]
       User-Agent:
       - Faraday v0.17.0
       Accept-Encoding:
@@ -23,15 +23,15 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 400
-      message: Bad Request
+      code: 200
+      message: OK
     headers:
       Date:
-      - Fri, 08 Nov 2019 16:15:42 GMT
+      - Fri, 08 Nov 2019 16:15:20 GMT
       Content-Type:
       - application/json; charset=utf-8
-      Content-Length:
-      - '44'
+      Transfer-Encoding:
+      - chunked
       Connection:
       - keep-alive
       Server:
@@ -49,10 +49,10 @@ http_interactions:
       Access-Control-Expose-Headers:
       - X-Parse-Job-Status-Id, X-Parse-Push-Status-Id
       Etag:
-      - W/"2c-+k4uWWG73dP4Qb3gi22c7QTs1p8"
+      - W/"1a9-v44TXZLw5iptjXjTcvM0j9IXvFM"
     body:
-      encoding: UTF-8
-      string: '{"code":209,"error":"Invalid session token"}'
-    http_version: 
-  recorded_at: Fri, 08 Nov 2019 16:15:42 GMT
+      encoding: ASCII-8BIT
+      string: '{"objectId":"ENV[PARSE_SESSION_OBJECT_ID]","sessionToken":"ENV[PARSE_SESSION_TOKEN]","user":{"__type":"Pointer","className":"_User","objectId":"ENV[PARSE_USER_OBJECT_ID]"},"createdWith":{"action":"login","authProvider":"anonymous"},"restricted":false,"expiresAt":{"__type":"Date","iso":"2020-10-13T13:03:19.256Z"},"installationId":"1234","createdAt":"2019-10-14T13:03:19.256Z","updatedAt":"2019-10-14T13:03:19.256Z"}'
+    http_version:
+  recorded_at: Fri, 08 Nov 2019 16:15:20 GMT
 recorded_with: VCR 5.0.0
