--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,7 @@
 require:
   - rubocop-performance
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
 
 Style/Documentation:
@@ -15,6 +15,15 @@ Metrics/BlockLength:
 Metrics/MethodLength:
   Max: 30
 
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
+
 AllCops:
-  TargetRubyVersion: 2.6.5
+  TargetRubyVersion: 2.7.0
   DisplayCopNames: true
