--- a/spec/cassettes/Mule_Resources_Session/_find_/with_unknown_session/1_1_1_1.yml
+++ b/spec/cassettes/Mule_Resources_Session/_find_/with_unknown_session/1_1_1_1.yml
@@ -4,8 +4,8 @@ http_interactions:
     method: get
     uri: ENV[PARSE_URL]/parse/sessions/me
     body:
-      encoding: US-ASCII
-      string: ''
+      encoding: UTF-8
+      string: "{}"
     headers:
       Content-Type:
       - application/json
@@ -16,7 +16,7 @@ http_interactions:
       X-Parse-Session-Token:
       - '123456'
       User-Agent:
-      - Faraday v0.17.0
+      - Faraday v1.0.0
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -27,7 +27,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Thu, 07 Nov 2019 20:45:15 GMT
+      - Tue, 17 Mar 2020 17:26:47 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -35,7 +35,7 @@ http_interactions:
       Connection:
       - keep-alive
       Server:
-      - nginx/1.12.1
+      - nginx/1.16.1
       X-Powered-By:
       - Express
       Access-Control-Allow-Origin:
@@ -53,6 +53,6 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"code":209,"error":"Invalid session token"}'
-    http_version: 
-  recorded_at: Thu, 07 Nov 2019 20:45:13 GMT
-recorded_with: VCR 5.0.0
+    http_version: null
+  recorded_at: Tue, 17 Mar 2020 17:26:47 GMT
+recorded_with: VCR 5.1.0
