--- a/spec/cassettes/Mule_Resources_Session/_find_/with_unknown_session/1_1_1_3.yml
+++ b/spec/cassettes/Mule_Resources_Session/_find_/with_unknown_session/1_1_1_3.yml
@@ -4,8 +4,8 @@ http_interactions:
     method: get
     uri: ENV[PARSE_URL]/parse/sessions/me
     body:
-      encoding: US-ASCII
-      string: ''
+      encoding: UTF-8
+      string: "{}"
     headers:
       Content-Type:
       - application/json
@@ -14,28 +14,28 @@ http_interactions:
       X-Parse-Rest-Api-Key:
       - ENV[PARSE_REST_API_KEY]
       X-Parse-Session-Token:
-      - ENV[PARSE_SESSION_TOKEN]
+      - '123456'
       User-Agent:
-      - Faraday v0.17.0
+      - Faraday v1.0.0
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 400
+      message: Bad Request
     headers:
       Date:
-      - Fri, 08 Nov 2019 16:15:42 GMT
+      - Tue, 17 Mar 2020 17:26:48 GMT
       Content-Type:
       - application/json; charset=utf-8
-      Transfer-Encoding:
-      - chunked
+      Content-Length:
+      - '44'
       Connection:
       - keep-alive
       Server:
-      - nginx/1.12.1
+      - nginx/1.16.1
       X-Powered-By:
       - Express
       Access-Control-Allow-Origin:
@@ -49,10 +49,10 @@ http_interactions:
       Access-Control-Expose-Headers:
       - X-Parse-Job-Status-Id, X-Parse-Push-Status-Id
       Etag:
-      - W/"1a9-v44TXZLw5iptjXjTcvM0j9IXvFM"
+      - W/"2c-+k4uWWG73dP4Qb3gi22c7QTs1p8"
     body:
-      encoding: ASCII-8BIT
-      string: '{"objectId":"ENV[PARSE_SESSION_OBJECT_ID]","sessionToken":"ENV[PARSE_SESSION_TOKEN]","user":{"__type":"Pointer","className":"_User","objectId":"ENV[PARSE_USER_OBJECT_ID]"},"createdWith":{"action":"login","authProvider":"anonymous"},"restricted":false,"expiresAt":{"__type":"Date","iso":"2020-10-13T13:03:19.256Z"},"installationId":"1234","createdAt":"2019-10-14T13:03:19.256Z","updatedAt":"2019-10-14T13:03:19.256Z"}'
-    http_version:
-  recorded_at: Fri, 08 Nov 2019 16:15:42 GMT
-recorded_with: VCR 5.0.0
+      encoding: UTF-8
+      string: '{"code":209,"error":"Invalid session token"}'
+    http_version: null
+  recorded_at: Tue, 17 Mar 2020 17:26:48 GMT
+recorded_with: VCR 5.1.0
